# pytest_reportlogs

./: LICENSE  README.md  pyproject.toml  tox.ini
src/pytest_reportlogs/: __init__.py  plugin.py  report_logger.py
tests/: __init__.py  test_pytest_reportlogs.py
